xserver-xorg-video-cirrus (1:1.2.1-3) UNRELEASED; urgency=low

  * Merge changes from 1:1.2.1-1.lenny1.

 -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 21:17:45 +0100

xserver-xorg-video-cirrus (1:1.2.1-2) experimental; urgency=low

  * Build against xserver 1.5.

 -- Julien Cristau <jcristau@debian.org>  Thu, 04 Sep 2008 14:49:26 +0200

xserver-xorg-video-cirrus (1:1.2.1-1.lenny1) unstable; urgency=high

  * Cherry-pick from upstream:
    alpine: fix order of arguments of PCI_WRITE_LONG().

 -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 21:10:09 +0100

xserver-xorg-video-cirrus (1:1.2.1-1) unstable; urgency=low

  * New upstream release.
  * Remove XS- prefix to Vcs-* fields in debian/rules.
  * Bump Standards-Version to 3.7.3, no change needed.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.
    + Build-depend on dpkg-dev >= 1.14.17.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 22 May 2008 08:34:50 +0200

xserver-xorg-video-cirrus (1:1.1.0-8) unstable; urgency=low

  * Upload to unstable

 -- David Nusinow <dnusinow@debian.org>  Sun, 16 Sep 2007 15:43:43 -0400

xserver-xorg-video-cirrus (1:1.1.0-7) experimental; urgency=low

  * Add 01_gen_pci_ids.diff
    This patch provides a set of PCI ID's supported by this driver so that it
    can be autoloaded by the X server

 -- David Nusinow <dnusinow@debian.org>  Fri, 14 Sep 2007 00:18:25 -0400

xserver-xorg-video-cirrus (1:1.1.0-6) experimental; urgency=low

  [ Julien Cristau ]
  * Add link to xserver-xorg-core bug script, so that bugreports contain
    the user's config and log files.
  * Bump dependency on xserver-xorg-core to >= 2:1.1.1-11, as previous
    versions don't have the bug script.

  [ Timo Aaltonen ]
  * Replaces/Conflicts: xserver-xorg-driver-cirrus.

  [ Brice Goglin ]