@@ -14,7 +14,10 @@ Build-Depends:
  x11proto-randr-dev,
  x11proto-render-dev,
  x11proto-xext-dev,
- dpkg-dev (>= 1.14.17)
+ dpkg-dev (>= 1.14.17),
+ automake,
+ libtool,
+ xutils-dev
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/driver/xserver-xorg-video-cirrus
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-video-cirrus.git
