@@ -1,6 +1,9 @@
 xserver-xorg-video-cirrus (1:1.2.1-3) UNRELEASED; urgency=low
 
   * Merge changes from 1:1.2.1-1.lenny1.
+  * Run autoreconf on build.  Build-depend on automake, libtool and
+    xutils-dev.
+  * Handle parallel builds.
 
  -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 21:17:45 +0100
 
